--- a/src/app/dashboard/hiring-manager/hiring-manager.component.html
+++ b/src/app/dashboard/hiring-manager/hiring-manager.component.html
@@ -1,13 +1,14 @@
 <div class="mainContainer">
 <div class="stepperContainer">
-<mat-stepper headerPosition="bottom"  #stepper>
+<mat-stepper headerPosition="bottom" labelPosition="bottom" #stepper>
+
   <mat-step>
-    <div class="mat-title">Daran arbeitest du</div>
-    <div class="empathyBox">to be filled ...</div>
+    <div class="mat-title">Deine Aufgabe</div>
+    <div class="empathyBox">Reflektiere und beschreibe an dieser Stelle so präzise wie möglich, an welchen Aufgaben und Projekten gearbeitet wird. Dies ist entscheidend für Bewerbende, um nachvollziehen zu können, wie ihre Arbeit auf die Ziele der Behörde einzahlt.</div>
     <form [formGroup]="form">
-      <ng-template matStepLabel>Daran arbeitest du</ng-template>
+      <ng-template matStepLabel>Deine Aufgabe</ng-template>
       <mat-form-field appearance="fill">
-        <mat-label>Name this is new</mat-label>
+        <mat-label>deine Aufgabe ...</mat-label>
         <textarea matInput rows="6" formControlName="what_you_work_on" placeholder="..."></textarea>
       </mat-form-field>
       <div>
@@ -15,6 +16,7 @@
       </div>
     </form>
   </mat-step>
+
   <mat-step>
     <form [formGroup]="form">
       <div class="mat-title">Das bringst du mit</div>
@@ -31,6 +33,7 @@
       </div>
     </form>
   </mat-step>
+
   <mat-step>
     <form [formGroup]="form">
       <div class="mat-title">Team</div>
@@ -43,14 +46,72 @@
       </mat-form-field>
       <div>
         <button mat-button matStepperPrevious>Back</button>
+        <button mat-button matStepperNext>Next</button>
+      </div>
+    </form>
+  </mat-step>
+
+  <mat-step>
+    <form [formGroup]="form">
+      <div class="mat-title">Unsere Arbeit </div>
+      <div class="empathyBox">to be filled ...</div>
+
+      <ng-template matStepLabel>Unsere Arbeit</ng-template>
+      <mat-form-field appearance="fill">
+        <mat-label>Unsere Arbeit</mat-label>
+        <textarea matInput rows="6" formControlName="how_we_work" placeholder="..."></textarea>
+      </mat-form-field>
+      <div>
+        <button mat-button matStepperPrevious>Back</button>
+        <button mat-button matStepperNext>Next</button>
+      </div>
+    </form>
+  </mat-step>
+
+  <mat-step>
+    <form [formGroup]="form">
+      <div class="mat-title">Die Stelle fürs Referat</div>
+      <div class="empathyBox">Formuliere in wenigen Sätzen, wie die Bewerbenden in ihrer zukünftigen Position einen Mehrwert für ihr Referat bieten.
+      </div>
+
+      <ng-template matStepLabel>Die Stelle fürs Referat</ng-template>
+      <mat-form-field appearance="fill">
+        <mat-label>Die Stelle fürs Referat</mat-label>
+        <textarea matInput rows="6" formControlName="impact_in_work" placeholder="..."></textarea>
+      </mat-form-field>
+      <div>
+        <button mat-button matStepperPrevious>Back</button>
+        <button mat-button matStepperNext>Next</button>
+      </div>
+    </form>
+  </mat-step>
+
+  <mat-step>
+    <form [formGroup]="form">
+      <div class="mat-title">Jobtitel</div>
+      <div class="empathyBox">to be filled ...</div>
+
+      <ng-template matStepLabel>Jobtitel</ng-template>
+      <mat-form-field appearance="fill">
+        <mat-label>Jobtitel</mat-label>
+        <input matInput formControlName="title" placeholder="...">
+      </mat-form-field>
+      <div class="empathyBox">to be filled ...</div>
+      <mat-form-field appearance="fill">
+        <mat-label>Zusammenfassung</mat-label>
+        <textarea matInput rows="4" formControlName="summary" placeholder="..."></textarea>
+      </mat-form-field>
+      <div>
+        <button mat-button matStepperPrevious>Back</button>
         <button mat-button (click)="save()">Save</button>
         <button mat-button (click)="submitToHr()">Submit to HR</button>
       </div>
     </form>
   </mat-step>
+
 </mat-stepper>
 </div>
 <div class="helpContainer">
-  <div class="hintBox">to be filled ...</div>
+  <app-hintbox [stepperIndex]="stepper.selectedIndex"></app-hintbox>
 </div>
 </div>
