--- a/src/app/dashboard/human-resources-view/human-resources-view.component.css
+++ b/src/app/dashboard/human-resources-view/human-resources-view.component.css
@@ -23,21 +23,21 @@
 
 .empathyBox {
   padding: 30px;
-  height: 150px;
+  /* height: 150px; */
   border-radius: 5px;
   border: 2px solid rgba(98, 98, 98, 0.374);
 }
 
 .hintBox {
   padding: 30px;
-  height: 450px;
+  /* height: 450px; */
   border-radius: 5px;
   border: 2px solid rgb(98, 98, 98, 0.374);
 }
 
 .smallHintBox {
   padding: 30px;
-  height: 250px;
+  /* height: 250px; */
   border-radius: 5px;
   border: 2px solid rgb(98, 98, 98, 0.374);
 }
