--- a/src/app/preview-page/preview-page.component.html
+++ b/src/app/preview-page/preview-page.component.html
@@ -2,58 +2,41 @@
 <div class="contentContainer">
   <div class="headerBanner"></div>
 <div class="headerBody">
-  <div class="headerTitle">Referentin/Referent (w/m/d) für den Bereich "Nationales
-    IT-Lagezentrum, Grundsatz und Meldestelle" </div>
-  <div class="headerSummary">Im Nationalen IT - Lagezentrum unterstützen Sie den 24/7 Dauerdienst und  entwickeln Strukturen und Prozesse, um die Einsatzbereitschaft jederzeit sicherzustellen.</div>
+  <div class="headerTitle">{{ jd_data?.hr_data?.title }}</div>
+  <div class="headerSummary">
+    {{ jd_data?.hr_data?.summary}}
+  </div>
 </div>
 <div class="headerBanner"></div>
 <div class="headerBanner"></div>
   <div class="headerDetailsContent">
-    <p><span class="headerDetailsContentBold">Ort:</span> Berlin</p>
-    <p><span class="headerDetailsContentBold">Bewerbungsfrist:</span> keine</p>
-    <p><span class="headerDetailsContentBold">Beschäftigung:</span> Teilzeit, Vollzeit</p>
-    <p><span class="headerDetailsContentBold">Eintrittsdatum:</span> ab sofort</p>
+    <p><span class="headerDetailsContentBold">Ort:</span>{{ jd_data?.location }}</p>
+    <p><span class="headerDetailsContentBold">Bewerbungsfrist:</span>{{ jd_data?.application_deadline }}</p>
+    <p><span class="headerDetailsContentBold">Beschäftigung:</span>{{ jd_data?.employment_type }}</p>
+    <p><span class="headerDetailsContentBold">Eintrittsdatum:</span>{{ jd_data?.start_date }}</p>
     </div>
   <div class="headerDetailsContent">
-    <p><span class="headerDetailsContentBold">Benötigte Abschlüsse:</span> ...</p>
-    <p><span class="headerDetailsContentBold">Ausschreibungsnummer: </span> 02-011-2022</p>
-    <p><span class="headerDetailsContentBold">Vergütung: </span>TV-L E 13 / A13h - A14</p>
-    <p><span class="headerDetailsContentBold">Webseite: </span>bmi.bund.de</p>
+    <p><span class="headerDetailsContentBold">Benötigte Abschlüsse:</span>{{ jd_data?.education }}</p>
+    <p><span class="headerDetailsContentBold">Ausschreibungsnummer: </span>{{ jd_data?.id }}</p>
+    <p><span class="headerDetailsContentBold">Vergütung: </span>{{ jd_data?.compensation }}</p>
+    <p><span class="headerDetailsContentBold">Webseite: </span>{{ jd_data?.website }}</p>
     </div>
     <div class="headerBanner"></div>
     <div class="contentBorder"></div>
 <div class="contentMainBody">
   <div class="contentBodyTitle">Unser und dein Purpose</div>
-  <div class="contentBodyText">Als Cyber-Sicherheitsbehörde des Bundes kümmern wir uns darum, dass die Menschen der digitalen Welt vertrauen können. Mit bislang rund 1.400 Beschäftigten gestalten wir Informationssicherheit in der Digitalisierung durch Prävention, Detektion und Reaktion für Staat, Wirtschaft und Gesellschaft. Angesichts dieser großen Aufgabe soll unser Team auf über 1.700 Mitarbeitende stetig wachsen. Deshalb suchen wir engagierte Fach- und Führungskräfte, deren Herz auf der digitalen Seite schlägt.</div>
+  <div class="contentBodyText">
+    {{ jd_data?.hr_data?.purpose }}
+  </div>
   <div class="contentBodyTitle">Dein Profil</div>
   <div class="contentBodyText">
-    • Ein abgeschlossenes bzw. kurz vor dem Abschluss stehendes Studium (Diplom Uni/Master) der Fachrichtungen Rettungswesen, Notfall-/Krisenmanagement, Informatik, IT-Sicherheit, Physik, Mathematik, Nachrichten-, Kommunikations-, Elektrotechnik oder vergleichbare technische Studiengänge.
-·Kenntnisse in den Bereichen:
-• Erstellung von präventiven und reaktiven Notfallplänen
-• Risikobewertung und -management
-• Koordination und Organisation im Notfall/Krisenfall
-• Operativ-taktische Stabsarbeit
-• Lageerfassung/-bewertung/-bewältigung inkl. Visualisierung und Dokumentation
-• Operative Einsatzplanung
-• Krisenkommunikation
-• Übungsplanung und -durchführung
-• IT-Vorfallsbearbeitung (Grundkenntnisse)
-• Für ein besseres Verständnis der Arbeit und der Bedarfe bringen Sie idealerweise Erfahrung in der Lagefeststellung/-bewertung sowie der praktischen Bearbeitung unter Zeitdruck mit, z.B. durch die Mitarbeit in Einsätzen bei Feuerwehr oder Hilfsorganisationen.
+   {{ jd_data?.hr_data?.what_you_bring }}
   </div>
 </div>
 <div class="contentMainBody">
   <div class="contentBodyTitle">Deine Aufgabe</div>
   <div class="contentBodyText">
-    • Geschäftsstelle IT-Krisenreaktionszentrum:
-    • Weiterentwicklung der IT-Krisenmanagementkonzepte.
-    • Schulungen für Mitarbeiter inkl. Übungsvorbereitung und -durchführung.
-    • Organisatorische Arbeiten zur Sicherstellung der Einsatzbereitschaft und schnellen Umsetzung der vorbereiteten Konzepte.
-    • Weiterentwicklung der Strukturen und Prozesse im Team mit Technikern und Führungskräften.
-    • Bearbeitung von Grundsatzangelegenheiten.
-    • Gremienarbeit im In- und Ausland im Kontext von Übungen und der Zusammenarbeit im IT-Krisenmanagement.
-    • Beratung der eingesetzten Führungskräfte im Krisenfall und Mitarbeit im Führungsstab.
-    • Konzeption und Weiterentwicklung von Prozessen im Lagezentrum.
-    • Analyse und Bewertung der IT-Sicherheitslage.
+    {{ jd_data?.hr_data?.what_you_work_on }}
   </div>
 </div>
 <div class="contentBorder"></div>
@@ -62,7 +45,7 @@
     <div class="contentBodyTilesBackground">
 <div class="contentBodyTitle">Dein Team</div>
 <div class="contentBodyText">
-  Das Referat ist von einem hohen Teamgeist geprägt. Hier arbeiten 10 Mitarbeiterinnen und Mitarbeiter gemeinsam darah, die IT-Sicherheit in Deutschland sicherzustellen. Wir sind ein bunt gemischter Haufen! Sowohl alte Hasen, wie auch Newbees arbeiten hier Hand in Hand und unterstützen sich gegenseitig. Die einen vermitteln Erfahrung und die anderen bringen frischen Wind und neue Ideen mit ein.
+  {{ jd_data?.hr_data?.team }}
 </div>
 </div>
 </div>
@@ -70,7 +53,7 @@
     <div class="contentBodyTilesBackground">
 <div class="contentBodyTitle">Unsere Arbeit</div>
 <div class="contentBodyText">
-  Unsere Hierarchieebenen im BSI sind flach. Wir arbeiten konstruktiv und respektvoll auf Augenhöhe zusammen und unterstützen uns im Team, aber auch die Kolleginnen und Kollegen andere Referate, gegenseitig.
+  {{ jd_data?.hr_data?.how_we_work }}
 </div>
 </div>
 </div>
@@ -78,12 +61,7 @@
   <div class="contentBodyTilesBackground">
 <div class="contentBodyTitle">Benefits</div>
 <div class="contentBodyText">
-  Einen anspruchsvollen Job mit gesellschaftlichem Mehrwert
-  Abwechslungsreiche Tätigkeiten bei der Gestaltung der IT-Sicherheit in Deutschland
-  Einen sicheren Arbeitsplatz im öffentlichen Dienst nach TVöD in der EG 13 und zusätzlich eine BSI-Zulage in Höhe von 200 EUR.
-  Flexible Arbeitszeiten, Möglichkeit zum mobilen Arbeiten sowie Teilzeitarbeit
-  Bei Vorliegen entsprechender Voraussetzungen und Leistungen die Möglichkeit einer späteren Verbeamtung
-  Ein vergünstigtes Monatsticket für den Personennahverkehr (Job-Ticket)
+  {{ jd_data?.hr_data?.benefits }}
 </div>
 </div>
 </div>
@@ -93,14 +71,7 @@
   <div class="contentBodyTilesBackground">
   <div class="contentBodyTitle">Unser Prozess</div>
   <div class="contentBodyText">
-    Haben Sie Fragen zur Stelle?
-    Für Ihre Fragen stehen Ihnen folgende Ansprechpersonen zur Verfügung:
-
-    • Fragen zum Bewerbungs-managementsystem: Servicezentrum Personalgewinnung des Bundesverwaltungsamtes unter 0228 99 358 87500
-
-    • Fachliche Fragen: Dr. Christian Eibl (Referatsleitung Referat OC 31) unter 0228 99 9582 5830
-
-    • Organisatorische Fragen: Vera Hanses (Personalgewinnung des BSI) unter 0228 99 9582 6917
+    {{ jd_data?.hr_data?.process }}
   </div>
   </div>
 </div>
@@ -109,11 +80,7 @@
     <div class="contentBodyTitle">Rechtliches</div>
     <div class="contentBodyDoubleTilesText">
     <div class="contentBodyText">
-      • Laden Sie bitte Ihre vollständigen und aussagekräftigen Unterlagen, inklusive Motivationsschreiben, als ein (1) PDF Dokument (max. 20 MB) in das Bewerbungssystem hoch.
-      • Hinweise zu unseren Datenschutzbedingungen finden Sie hier.
-      • Wir betrachten Diversität und geschlechtsunabhängige berufliche Gleichstellung als wichtige Bestandteile unserer Personalpolitik, daher freuen wir uns über Bewerbungen von Menschen aller geschlechtlichen Identitäten, jeden Alters oder Herkunft. Frauen möchten wir ausdrücklich ermutigen, sich zu bewerben.
-      • Menschen mit Schwerbehinderung werden bei gleicher Eignung bevorzugt. Von ihnen wird nur das Mindestmaß an körperlicher Eignung verlangt.
-• Bei ausländischen Bildungsabschlüssen ist ein entsprechender Nachweis über die Gleichwertigkeit mit einem deutschen Abschluss erforderlich (Übersetzungen sind nicht ausreichend). Wir bitten um Vorlage der Feststellung der Vergleichbarkeit durch die Zentralstelle für ausländisches Bildungswesen (ZAB); weitere Informationen dazu finden Sie hier.
+      {{ jd_data?.hr_data?.legal }}
     </div>
     </div>
   </div></div>
@@ -143,6 +110,7 @@
       <div class="contentBodyTilesBackground">
       <div class="contentBodyTitle">Freifeld</div>
       <div class="contentBodyText">
+          {{ jd_data?.hr_data?.free_field }}
       </div>
       </div>
     </div>
@@ -153,6 +121,9 @@
   <div class="contentBodyDoubleTiles">
     <div class="contentBodyDoubleTilesBackground">
       <div class="contentBodyTitle">Disclaimer</div>
+      <div class="contentBodyText">
+        {{ jd_data?.hr_data?.disclaimer }}
+    </div>
     </div></div>
 
     <div class="contentBorder"></div>
