--- a/src/app/dashboard/hiring-manager/hiring-manager.component.html
+++ b/src/app/dashboard/hiring-manager/hiring-manager.component.html
@@ -1,6 +1,6 @@
 <div class="mainContainer">
 <div class="stepperContainer">
-<mat-stepper headerPosition="bottom" labelPosition="bottom" #stepper>
+<mat-stepper class="stepper" headerPosition="bottom" labelPosition="bottom" #stepper>
 
   <mat-step>
     <div class="mat-title">Deine Aufgabe</div>
