--- a/src/app/dashboard/department-view/department-view.component.css
+++ b/src/app/dashboard/department-view/department-view.component.css
@@ -7,7 +7,44 @@
 
 .helpContainer {
   grid-column: span 1;
-  /* background-color: red; */
+  margin-top: 50px;
+  margin-bottom: 50px;
+  margin-left: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.hints {
+  width: 100%;
+  background-color: white;
+  border-radius: 15px 0px 0px 15px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.title {
+  margin-top: 40px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.15px;
+  color: #23036A;
+  margin-left: 70px;
+}
+
+.empathyText {
+  margin-top: 15px;
+  margin-left: 90px;
+  margin-right: 90px;
+  margin-bottom: 40px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  /* or 150% */
+  letter-spacing: 0.15px;
+
+  /* 00. On Surface / Medium Emphasis */
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .stepperContainer {
@@ -59,8 +96,6 @@
   margin-right: 94px;
   margin-bottom: 64px;
 }
-
-
 
 textarea {
   margin-top: 4px;
