--- a/src/app/dashboard/department-view/department-view.component.html
+++ b/src/app/dashboard/department-view/department-view.component.html
@@ -25,9 +25,18 @@
       <span class="spacer"></span>
       <button mat-raised-button color="primary" (click)="_next()" *ngIf="stepper.index !== 6">WEITER</button>
       <button mat-raised-button color="primary" (click)="save()" *ngIf="stepper.index == 6">SICHERN</button>
+      <button mat-raised-button color="primary" (click)="submitToHr()" *ngIf="stepper.index == 6">FERTIGSTELLEN</button>
     </span>
     <app-stepper #stepper class="stepper"></app-stepper>
   </div>
   <div class="helpContainer">
+    <div class="hints">
+      <div class="title">Hilfestellungen</div>
+      <div class="empathyText">
+        <ul>
+          <li *ngFor="let hint of displayData[stepper.index].hints">{{ hint }}</li>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
