--- a/src/app/dashboard/human-resources-view/human-resources-view.component.html
+++ b/src/app/dashboard/human-resources-view/human-resources-view.component.html
@@ -1,211 +1,49 @@
 <div class="mainContainer">
   <div class="stepperContainer">
-    <mat-stepper headerPosition="bottom" labelPosition="bottom" #stepper>
-    <mat-step>
+    <div class="stepperContent">
+      <app-content
+        [title]="displayData[stepper.index].title"
+        [text]="displayData[stepper.index].text"
+        [imageUrl]="displayData[stepper.index].imageUrl"
+        [textareaLabel]="displayData[stepper.index].textareaLabel">
+      </app-content>
+
       <form [formGroup]="form">
-        <div class="mat-title">Deine Aufgabe</div>
-        <div class="empathyBox">Reflektiere und beschreibe an dieser Stelle so präzise wie möglich, an welchen Aufgaben und Projekten gearbeitet wird. Dies ist entscheidend für Bewerbende, um nachvollziehen zu können, wie ihre Arbeit auf die Ziele der Behörde einzahlt.
-        </div>
-
-        <!-- <ng-template matStepLabel>Deine Aufgabe</ng-template> -->
-        <mat-form-field appearance="fill">
-          <mat-label>Deine Aufgabe</mat-label>
-          <textarea matInput rows="6" formControlName="what_you_work_on" placeholder="..."></textarea>
-        </mat-form-field>
-
-        <div>
-          <button mat-button matStepperNext>Next</button>
-        </div>
+        <textarea rows="6" formControlName="what_you_work_on" *ngIf="stepper.index == 0"></textarea>
+        <textarea rows="6" formControlName="what_you_bring" *ngIf="stepper.index == 1"></textarea>
+        <textarea rows="6" formControlName="team" *ngIf="stepper.index == 2"></textarea>
+        <textarea rows="6" formControlName="how_we_work" *ngIf="stepper.index == 3"></textarea>
+        <textarea rows="6" formControlName="purpose" *ngIf="stepper.index == 4"></textarea>
+        <textarea rows="6" formControlName="title" *ngIf="stepper.index == 5"></textarea>
+        <textarea rows="6" formControlName="summary" *ngIf="stepper.index == 6"></textarea>
+        <textarea rows="6" formControlName="benefits" *ngIf="stepper.index == 7"></textarea>
+        <textarea rows="6" formControlName="process" *ngIf="stepper.index == 8"></textarea>
+        <textarea rows="6" formControlName="legal" *ngIf="stepper.index == 9"></textarea>
       </form>
-    </mat-step>
 
-    <mat-step>
-      <form [formGroup]="form">
-        <div class="mat-title">Dein Profil</div>
-        <div class="empathyBox">Bewerbende möchten wissen, welche Qualifikationen sie mitbringen müssen und welche Fähigkeiten darüber hinaus für diese Stelle hilfreich wären.<br>
-          Reflektiere, was wirklich wichtig für diese Stelle ist, wie die Qualifikationen und Fähigkeiten auf das Tätigkeitsziel der Position einzahlen und beschreibe dies in wenigen Sätzen. </div>
-
-        <!-- <ng-template matStepLabel>Dein Profil</ng-template> -->
-        <mat-form-field appearance="fill">
-          <mat-label>Dein Profil</mat-label>
-          <textarea matInput rows="6" formControlName="what_you_bring" placeholder="..."></textarea>
-        </mat-form-field>
-        <div>
-          <button mat-button matStepperPrevious>Back</button>
-          <button mat-button matStepperNext>Next</button>
-        </div>
-      </form>
-    </mat-step>
-
-    <mat-step>
-      <form [formGroup]="form">
-        <div class="mat-title">Dein Team</div>
-        <div class="empathyBox">Beschreibe für diesen Absatz, mit welchen Rollen und Persönlichkeiten die Bewerbenden zusammenarbeiten und in Kontakt kommen. Besonders die Teamstruktur und Vorgesetzte können ausschlaggebend für eine Bewerbung sein.
-        </div>
-
-        <!-- <ng-template matStepLabel>Dein Team</ng-template> -->
-        <mat-form-field appearance="fill">
-          <mat-label>Dein Team</mat-label>
-          <textarea matInput rows="6" formControlName="team" placeholder="..."></textarea>
-        </mat-form-field>
-        <div>
-          <button mat-button matStepperPrevious>Back</button>
-          <button mat-button matStepperNext>Next</button>
-        </div>
-      </form>
-    </mat-step>
-
-    <mat-step>
-      <form [formGroup]="form">
-        <div class="mat-title">Unsere Arbeit</div>
-        <div class="empathyBox">Die Art der Zusammenarbeit im Team ist für Bewerbende sehr wichtig. Zeige auf, wie ihr arbeitet und welche Management- und Projektmethoden bei euch eine wichtige Rolle spielen. </div>
-
-        <!-- <ng-template matStepLabel>Unsere Arbeit</ng-template> -->
-        <mat-form-field appearance="fill">
-          <mat-label>Unsere Arbeit</mat-label>
-          <textarea matInput rows="6" formControlName="what_you_get" placeholder="..."></textarea>
-        </mat-form-field>
-        <div>
-          <button mat-button matStepperPrevious>Back</button>
-          <button mat-button matStepperNext>Next</button>
-        </div>
-      </form>
-    </mat-step>
-
-    <mat-step>
-      <form [formGroup]="form">
-        <div class="mat-title">Dein Purpose bei uns</div>
-        <div class="empathyBox">Formuliere in wenigen Sätzen, wie die Bewerbenden in ihrer zukünftigen Position einen Mehrwert für ihr Referat bieten. Wie zahlen sie damit auf die einzelnen Ziele der Behörde ein?</div>
-
-        <!-- <ng-template matStepLabel>Dein Purpose bei uns</ng-template> -->
-        <mat-form-field appearance="fill">
-          <mat-label>Dein Purpose bei uns</mat-label>
-          <textarea matInput rows="6" formControlName="purpose" placeholder="..."></textarea>
-        </mat-form-field>
-        <div>
-          <button mat-button matStepperPrevious>Back</button>
-          <button mat-button matStepperNext>Next</button>
-        </div>
-      </form>
-    </mat-step>
-
-    <mat-step>
-      <form [formGroup]="form">
-        <div class="mat-title">Jobtitel</div>
-        <div class="empathyBox">Bewerbenden möchten aus einem kurzen und prägnanten Titel herauslesen können, was ihr Aufgabe ist.
-
-          <p>An dieser Stelle nicht von Dienst-Rollen wie Referent:in, Sachbearbeiter:in, etc. sprechen
-          Bitte nicht mit behördlichen Funktionsbezeichungen arbeiten</p></div>
-
-        <!-- <ng-template matStepLabel>Jobtitel</ng-template> -->
-        <mat-form-field appearance="fill">
-          <mat-label>Jobtitel</mat-label>
-          <input matInput formControlName="title" placeholder="...">
-        </mat-form-field>
-        <div class="empathyBox">Formuliere einen Satz, der es Interessierten ermöglicht zu verstehen, worum es bei der Stelle geht und woran gearbeitet werden soll.</div>
-        <mat-form-field appearance="fill">
-          <mat-label>Zusammenfassung</mat-label>
-          <textarea matInput rows="4" formControlName="summary" placeholder="..."></textarea>
-        </mat-form-field>
-        <div>
-          <button mat-button matStepperPrevious>Back</button>
-          <button mat-button matStepperNext>Next</button>
-        </div>
-      </form>
-    </mat-step>
-
-    <mat-step>
-      <form [formGroup]="form">
-        <div class="mat-title">Benefits</div>
-        <div class="empathyBox">Welche Benefits bietet ihr als Behörde? Welche Besonderheiten bietet ihr über die Rahmenbedingungen des öffentlichen Dienstes hinaus? Verschaffe den Bewerbenden mithilfe von konkreten Beispielen einen nachvollziehbaren Einblick.
-        </div>
-
-        <!-- <ng-template matStepLabel>Benefits</ng-template> -->
-        <mat-form-field appearance="fill">
-          <mat-label>Benefits</mat-label>
-          <textarea matInput rows="6" formControlName="benefits" placeholder="..."></textarea>
-        </mat-form-field>
-        <div>
-          <button mat-button matStepperPrevious>Back</button>
-          <button mat-button matStepperNext>Next</button>
-        </div>
-      </form>
-    </mat-step>
-
-    <mat-step>
-      <form [formGroup]="form">
-        <div class="mat-title">Bewerbungsprozess</div>
-        <div class="empathyBox">Der Bewerbungsprozess im öffentlichen Dienst übersteigt die Dauer einer Bewerbung auf dem Arbeitsmarkt deutlich. Eine klare Kommunikation des Bewerbungsablaufs fördert Verständnis und Geduld beim Bewerbenden. Beschreibe, welchen Weg eine Bewerbung geht.
-        </div>
-
-        <!-- <ng-template matStepLabel>Bewerbungsprozess</ng-template> -->
-        <mat-form-field appearance="fill">
-          <mat-label>Bewerbungsprozess</mat-label>
-          <textarea matInput rows="6" formControlName="process" placeholder="..."></textarea>
-        </mat-form-field>
-        <div>
-          <button mat-button matStepperPrevious>Back</button>
-          <button mat-button matStepperNext>Next</button>
-        </div>
-      </form>
-    </mat-step>
-
-    <mat-step>
-      <form [formGroup]="form">
-        <div class="mat-title">Rechtliches</div>
-        <div class="empathyBox">Bewerbenden möchten übersichtlich die wichtigsten Informationen sehen. Daher füge die rechtlichen Informationen, wie zum Beispiel das Gleichstellungsgesetz als Link ein und halte dich kurz.</div>
-
-        <!-- <ng-template matStepLabel>Rechtliches</ng-template> -->
-        <mat-form-field appearance="fill">
-          <mat-label>Rechtliches</mat-label>
-          <textarea matInput rows="6" formControlName="legal" placeholder="..."></textarea>
-        </mat-form-field>
-        <div>
-          <button mat-button matStepperPrevious>Back</button>
-          <button mat-button matStepperNext>Next</button>
-        </div>
-      </form>
-    </mat-step>
-
-    <mat-step>
-      <form [formGroup]="form">
-        <div class="mat-title">Disclaimer</div>
-        <div class="empathyBox">to be filled ...</div>
-
-        <!-- <ng-template matStepLabel>Disclaimer</ng-template> -->
-        <mat-form-field appearance="fill">
-          <mat-label>Disclaimer</mat-label>
-          <textarea matInput rows="6" formControlName="disclaimer" placeholder="..."></textarea>
-        </mat-form-field>
-        <div>
-          <button mat-button matStepperPrevious>Back</button>
-          <button mat-button matStepperNext>Next</button>
-        </div>
-      </form>
-    </mat-step>
-
-    <mat-step>
-      <form [formGroup]="form">
-        <div class="mat-title">Freifeld</div>
-        <div class="empathyBox">Ergänze zusätzliche Informationen</div>
-
-        <!-- <ng-template matStepLabel>Freifeld</ng-template> -->
-        <mat-form-field appearance="fill">
-          <mat-label>Freifeld</mat-label>
-          <textarea matInput rows="6" formControlName="free_field" placeholder="..."></textarea>
-        </mat-form-field>
-        <div>
-          <button mat-button matStepperPrevious>Back</button>
-          <button mat-button (click)="save()">Save</button>
-          <button mat-button (click)="preview()">Vorschau</button>
-          <button mat-button (click)="finish()">Fertigstellen</button>
-        </div>
-      </form>
-    </mat-step>
-
-    </mat-stepper>
+    </div>
+    <div class="spacer"></div>
+    <span class="buttonBar">
+      <button mat-raised-button color="primary" (click)="back()" *ngIf="stepper.index !== 0">ZURÜCK</button>
+      <span class="spacer"></span>
+      <button mat-raised-button color="primary" (click)="next()" *ngIf="stepper.index !== 9">WEITER</button>
+      <button mat-raised-button color="primary" (click)="save()" *ngIf="stepper.index == 9">SICHERN</button>
+      <button mat-raised-button color="primary" (click)="save()" *ngIf="stepper.index == 9">FERTIGSTELLEN</button>
+    </span>
+    <app-stepper-HR #stepper class="stepper"></app-stepper-HR>
   </div>
   <div class="helpContainer">
-    <app-hintbox [stepperIndex]="stepper.selectedIndex"></app-hintbox>
+    <div class="hints">
+      <div class="title">Hilfestellungen</div>
+      <div class="empathyText">
+        <ul>
+          <li *ngFor="let hint of displayData[stepper.index].hints">{{ hint }}</li>
+        </ul>
+      </div>
+    </div>
+    <div class="hints" *ngIf="stepper.index === 3">
+      <div class="title">Input der Fachabteilung</div>
+      <div class="empathyText">"{{ jd_data?.hiring_manager_data?.how_we_work }}"</div>
+     </div>
   </div>
 </div>
