--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -5,14 +5,15 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar (click)="drawer.toggle()">Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item [routerLink]='["dashboard"]'>Dashboard</a>
+      <a mat-list-item [routerLink]='["dashboard"]'>Home</a>
       <a mat-list-item [routerLink]='["/preview"]'>Vorschau</a>
-      <a mat-list-item [routerLink]='["/department"]'>Stepper</a>
+      <a mat-list-item [routerLink]='["/department"]'>Department</a>
+      <a mat-list-item [routerLink]='["/recruitment"]'>Personal</a>
       <!-- <a mat-list-item [routerLink]='["hiringmanager"]'>{{ userRoleService.role }}</a> -->
       <!-- <a mat-list-item [routerLink]='["newjobdescription"]'>Textbausteine</a> -->
     </mat-nav-list>
   </mat-sidenav>
-  <mat-sidenav-content>
+  <mat-sidenav-content class="sidenav-container">
     <mat-toolbar color="primary">
       <button
         type="button"
@@ -58,6 +59,8 @@
           </button>
         </mat-menu>
     </mat-toolbar>
-    <router-outlet></router-outlet>
+    <!-- <div class="contentContainer"> -->
+      <router-outlet></router-outlet>
+    <!-- </div> -->
   </mat-sidenav-content>
 </mat-sidenav-container>
