--- a/src/app/dashboard/human-resources-view/human-resources-view.component.html
+++ b/src/app/dashboard/human-resources-view/human-resources-view.component.html
@@ -26,9 +26,10 @@
     <span class="buttonBar">
       <button mat-raised-button color="primary" (click)="back()" *ngIf="stepper.index !== 0">ZURÜCK</button>
       <span class="spacer"></span>
+      <button mat-raised-button color="primary" (click)="save()" *ngIf="stepper.index !== 9">SICHERN</button>
       <button mat-raised-button color="primary" (click)="next()" *ngIf="stepper.index !== 9">WEITER</button>
-      <button mat-raised-button color="primary" (click)="save()" *ngIf="stepper.index == 9">SICHERN</button>
-      <button mat-raised-button color="primary" (click)="save()" *ngIf="stepper.index == 9">FERTIGSTELLEN</button>
+      <button mat-raised-button color="primary" (click)="preview()" *ngIf="stepper.index === 9">VORSCHAU</button>
+      <button mat-raised-button color="primary" (click)="finish()" *ngIf="stepper.index == 9">FERTIGSTELLEN</button>
     </span>
     <app-stepper-HR #stepper class="stepper"></app-stepper-HR>
   </div>
