--- a/src/app/dashboard/listoverview/listoverview.component.css
+++ b/src/app/dashboard/listoverview/listoverview.component.css
@@ -1,6 +1,29 @@
-.list-container {
+.mainContainer {
+  /* height: calc(100% - 50px); */
+  background-color: rgb(236, 220, 250);
+}
+
+.sectionContainer {
+  padding: 25px;
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin-bottom: 40px;
+}
+
+.title {
+  margin-top: 20px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.15px;
+  color: #23036A;
+  /* margin-left: 70px; */
+}
+
+.listContainer {
   width: 50%;
-  margin: auto;
+  margin-left: 15%;
   padding-top: 50px;
 }
 
