--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -7,8 +7,8 @@
     <mat-nav-list>
       <a mat-list-item [routerLink]='["dashboard"]'>Home</a>
       <a mat-list-item [routerLink]='["/preview"]'>Vorschau</a>
-      <a mat-list-item [routerLink]='["/department"]'>Department</a>
-      <a mat-list-item [routerLink]='["/recruitment"]'>Personal</a>
+      <!-- <a mat-list-item [routerLink]='["/department"]'>Department</a>
+      <a mat-list-item [routerLink]='["/recruitment"]'>Personal</a> -->
       <!-- <a mat-list-item [routerLink]='["hiringmanager"]'>{{ userRoleService.role }}</a> -->
       <!-- <a mat-list-item [routerLink]='["newjobdescription"]'>Textbausteine</a> -->
     </mat-nav-list>
