--- a/src/app/dashboard/human-resources-view/stepper/stepper.component.html
+++ b/src/app/dashboard/human-resources-view/stepper/stepper.component.html
@@ -1,21 +1,21 @@
 <div class="line">
-    <app-stepper-dot [index]="0" [activeStep]="index"></app-stepper-dot>
+    <app-stepper-dot [index]="0" [activeStep]="index" (click)="onClick(0)"></app-stepper-dot>
     <span class="divider"></span>
-    <app-stepper-dot [index]="1" [activeStep]="index"></app-stepper-dot>
+    <app-stepper-dot [index]="1" [activeStep]="index" (click)="onClick(1)"></app-stepper-dot>
     <span class="divider"></span>
-    <app-stepper-dot [index]="2" [activeStep]="index"></app-stepper-dot>
+    <app-stepper-dot [index]="2" [activeStep]="index" (click)="onClick(2)"></app-stepper-dot>
     <span class="divider"></span>
-    <app-stepper-dot [index]="3" [activeStep]="index"></app-stepper-dot>
+    <app-stepper-dot [index]="3" [activeStep]="index" (click)="onClick(3)"></app-stepper-dot>
     <span class="divider"></span>
-    <app-stepper-dot [index]="4" [activeStep]="index"></app-stepper-dot>
+    <app-stepper-dot [index]="4" [activeStep]="index" (click)="onClick(4)"></app-stepper-dot>
     <span class="divider"></span>
-    <app-stepper-dot [index]="5" [activeStep]="index"></app-stepper-dot>
+    <app-stepper-dot [index]="5" [activeStep]="index" (click)="onClick(5)"></app-stepper-dot>
     <span class="divider"></span>
-    <app-stepper-dot [index]="6" [activeStep]="index"></app-stepper-dot>
+    <app-stepper-dot [index]="6" [activeStep]="index" (click)="onClick(6)"></app-stepper-dot>
     <span class="divider"></span>
-    <app-stepper-dot [index]="7" [activeStep]="index"></app-stepper-dot>
+    <app-stepper-dot [index]="7" [activeStep]="index" (click)="onClick(7)"></app-stepper-dot>
     <span class="divider"></span>
-    <app-stepper-dot [index]="8" [activeStep]="index"></app-stepper-dot>
+    <app-stepper-dot [index]="8" [activeStep]="index" (click)="onClick(8)"></app-stepper-dot>
     <span class="divider"></span>
-    <app-stepper-dot [index]="9" [activeStep]="index"></app-stepper-dot>
+    <app-stepper-dot [index]="9" [activeStep]="index" (click)="onClick(9)"></app-stepper-dot>
 </div>
